tests/baselines/reference/objectRestForOf.errors.txt
tests/cases/conformance/types/rest/objectRestForOf.ts(2,30): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/types/rest/objectRestForOf.ts(7,18): error TS2322: Type '{}' is not assignable to type '{ y: 文字; }'.
  Property 'y' is missing in type '{}'.
tests/cases/conformance/types/rest/objectRestForOf.ts(7,32): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/types/rest/objectRestForOf.ts(10,22): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/types/rest/objectRestForOf.ts (4 errors) ====
    let array: { x: number, y: string }[];
    for (let { x, ...restOf } of array) {
                                 ~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        [x, restOf];
    }
    let xx: number;
    let rrestOff: { y: string };
    for ({ x: xx, ...rrestOff } of array ) {
                     ~~~~~~~~
!!! error TS2322: Type '{}' is not assignable to type '{ y: 文字; }'.
!!! error TS2322:   Property 'y' is missing in type '{}'.
                                   ~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        [xx, rrestOff];
    }
    for (const norest of array.map(a => ({ ...a, x: 'a string' }))) {
                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        [norest.x, norest.y];
        // x is now a string. who knows why.
    }
    